Added basic styling, overhauled accessibility: inputs have <label elements>, keyboard navigation is easier

--- a/report/project-usability-report.tex
+++ b/report/project-usability-report.tex
@@ -58,6 +58,14 @@ Before beginning this stage of the project, there were some issues in the previo
     \item Gather content of interest to target persona to be used for knowledgebase functionality examples (documents, articles)
 \end{itemize}
 
+\subsection{Best Practices - Accessibility}
+
+Independently of any user investigations, there were a number of changes to make to the project for the sake of accessibility. This was done according to the Web Content Accessibility Guidelines (WCAG) published by the Web Accessibility Initiative (WAI) of the World Wide Web Consortium (W3C), making frequent referenct to the the WCAG2.2 quick reference. \cite{wcag-quickref}
+
+We added appropriate \texttt{<label>} elements for forms, specifically on the login and signup pages. These function about the same as the paragraph items in the template, except they work properly with screen readers used by the visually impaired. A number of changes were made to the site for accessibility, including adding the \texttt{autofocus} property to the username input, and event listeners to focus on the next step upon presses of the enter key. This is in contrast to how users who cannot use a mouse (and developers quickly testing) navigate the page, using the tab and enter keys, which, on a site with a number of hyperlinks in the top navigation bar, quickly becomes tedious.
+
+In the styling of the site, we kept accessibility in mind. We used  the html \texttt{rem} unit as the basis for the layout, so that the page would scale properly when zoomed in (as opposed to \texttt{vw} and \texttt{vh}). Pixels were used when setting the initial root font size, and \texttt{100dvh} was used as a minimum height for the main element. This use was justified as it does not impact the readability of the site, only potentially increasing the whitespace if the page content isn't large enough. We ensured that our choice of colors all contrasted well enough with each other in all their combinations.
+
 \section{Design Plan} % Navigation Design in specs
 
 \textbf{TODO in this section:}
@@ -138,6 +146,15 @@ This figure was generated using the codesnap \cite{CodeSnap} vscode extension, w
 "codesnap.roundedCorners": false,
 "codesnap.boxShadow": "none"
 \end{verbatim}
+
+\newpage
+\section{Bibliography}
+
+In addition to the referenced sources, the following tools were used during this project:
+
+\begin{itemize}
+    \item Realtime Colors \cite{rt-colors}
+\end{itemize}
 
 \bibliographystyle{ieeetr}
 \bibliography{refs}
