--- a/report/refs.bib
+++ b/report/refs.bib
@@ -4,3 +4,17 @@
   howpublished = {\url{https://marketplace.visualstudio.com/items?itemName=adpyke.codesnap}},
   note = {Accessed: 2024-05-7}
 }
+
+@misc{wcag-quickref,
+  title = {How to Meet WCAG (Quick Reference)},
+  author = {{Web Accessibility Initiative, W3C}},
+  howpublished = {\url{https://www.w3.org/WAI/WCAG22/quickref/}},
+  note = {Accessed: 2024-05-10}
+}
+
+@misc{rt-colors,
+  title = {Realtime Colors},
+  author = {Juxtopposed},
+  howpublished = {\url{https://www.realtimecolors.com/}},
+  note = {Accessed: 2024-05-10}
+}
